--- a/.github/ci-hpc-config.yml
+++ b/.github/ci-hpc-config.yml
@@ -1,13 +1,32 @@
-build:
-  modules:
-    - ninja
-  modules_package:
-    # Test without openmpi as this repository should not behave differently 
-    - atlas:fftw,eigen
-  dependencies:
-    - ecmwf/ecbuild@develop
-    - ecmwf/eckit@develop
-    - ecmwf/fckit@develop
-    - ecmwf/atlas@develop
-  parallel: 64
- 
+matrix:
+  - mpi_on
+  - mpi_off
+
+mpi_on:
+  build:
+    modules:
+      - ninja
+    modules_package:
+      - atlas:fftw,eigen,openmpi
+      - eckit:openmpi
+    dependencies:
+      - ecmwf/ecbuild@develop
+      - ecmwf/eckit@develop
+      - ecmwf/fckit@develop
+      - ecmwf/atlas@develop
+    parallel: 64
+    ntasks: 16
+
+mpi_off:
+  build:
+    modules:
+      - ninja
+    modules_package:
+      - atlas:fftw,eigen
+    dependencies:
+      - ecmwf/ecbuild@develop
+      - ecmwf/eckit@develop
+      - ecmwf/fckit@develop
+      - ecmwf/atlas@develop
+    parallel: 64
+
