--- a/.github/ci-hpc-config.yml
+++ b/.github/ci-hpc-config.yml
@@ -16,7 +16,10 @@ mpi_on:
       - ecmwf/atlas@develop
     parallel: 64
     ntasks: 16
-
+    env:
+        - ATLAS_ORCA_CACHING=1
+        - CTEST_PARALLEL_LEVEL=1
+        - AUTO_LOAD_PLUGINS=1        
 mpi_off:
   build:
     modules:
@@ -29,4 +32,9 @@ mpi_off:
       - ecmwf/fckit@develop
       - ecmwf/atlas@develop
     parallel: 64
+    env:
+        - ATLAS_ORCA_CACHING=1
+        - CTEST_PARALLEL_LEVEL=1
+        - AUTO_LOAD_PLUGINS=1        
+
 
